Closed Bug 959674 Opened 12 years ago Closed 12 years ago

background-blend-mode does not blend background images with the background color when the bottom most background image is opaque and has background-repeat:repeat

Categories

(Core :: Web Painting, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: olaru, Assigned: olaru)

References

Details

Attachments

(2 files)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_9_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/31.0.1650.63 Safari/537.36 Steps to reproduce: Have a div with a background-color set and an opaque background-image (such as jpg). Set background-blend-mode to something other than normal (multiply for example). Set background-repeat:repeat, or do not set it at all to leave it default. Actual results: The image does not blend with the color. Expected results: The background image should blend with the background color.
Blocks: 841601
Component: Untriaged → Layout: View Rendering
Product: Firefox → Core
Could someone please assign me to this bug? I have a fix and will upload patches soon.
Assignee: nobody → olaru
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
OS: Mac OS X → All
Hardware: x86 → All
Attachment #8359994 - Flags: review?(roc)
Attachment #8359995 - Flags: review?(roc)
(In reply to Horia Iosif Olaru from comment #1) > Could someone please assign me to this bug? I've given you editbugs.
Comment on attachment 8359994 [details] [diff] [review] One liner that fixes the bug Review of attachment 8359994 [details] [diff] [review]: ----------------------------------------------------------------- Excellent catch, thanks!
Attachment #8359994 - Flags: review?(roc) → review+
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Hi, I'm expiriencing same issue on Firefox 33.0 on Ubuntu 14.04 LTS. But I will named it like: "background-blend-mode does not blend background images with the background color." (no other conditions). Watch this in FF: http://codepen.io/anon/pen/Jjxdh
Component: Layout: View Rendering → Layout: Web Painting
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: