Bug 959674 - Check if any blend mode other than normal should be applied to the image and draw the background-color if so. r=roc